<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Music Sheets</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">Music Sheets</string>
    <string name="image">image</string>
    <string name="compose">Compose</string>
    <string name="display">Display</string>
    <string name="set">Settings</string>
    <string name="o">Other features</string>
    <string name="save" />
    <string name="save1">Save</string>
    <string name="title_activity_google_drive">GoogleDriveActivity</string>
    <string name="title_activity_create_file">CreateFileActivity</string>
    <string name="title_activity_api_client_async_task">ApiClientAsyncTask</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="title_activity_retrieve_contents_with_progress">
        RetrieveContentsWithProgressActivity
    </string>
    <string name="download_progress">Download Progress:</string>
</resources>
