<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

    tools:context=".MainActivity"
    android:weightSum="1"
    android:background="#ffffffff">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/textView"
        android:gravity="center_vertical|center_horizontal"
        android:textStyle="bold"
        android:textSize="14pt"
        android:background="#ff00ffff"
        android:layout_weight="0.06" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.2dp"
        android:id="@+id/viEw1"
        android:visibility="visible"
        android:background="@android:color/black"
        android:layout_marginBottom="10dp" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:layout_weight=".51"
        android:src="@drawable/s"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/image" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/compose"
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal"
        android:layout_weight=".0625"
        android:layout_marginBottom="10dp"
        android:background="#ffffff00"
        android:textColor="#ffff0000"
        android:onClick="onClick"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/display"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:layout_weight=".0625"
        android:layout_marginBottom="10dp"
        android:background="#ffffff00"
        android:textColor="#ffff0000"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/set"
        android:id="@+id/button3"
        android:layout_gravity="center_horizontal"
        android:layout_weight=".0625"
        android:layout_marginBottom="10dp"
        android:background="#ffffff00"
        android:textColor="#ffff0000"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/o"
        android:id="@+id/button4"
        android:layout_gravity="center_horizontal"
        android:layout_weight=".0625"
        android:layout_marginBottom="10dp"
        android:background="#ffffff00"
        android:textColor="#ffff0000" />

</LinearLayout>
